# llokq-agents

./: .gitignore  .pre-commit-config.yaml  INSTALL.md  MANIFEST.in  MCP_SERVER_PLAN.md  MCP_SERVER_PLAN_v2.md  Makefile  QUICK_START.md  README.md  TECHNICAL_REVIEW_ACTION_PLAN.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py  switch-agent.sh  templates-guide.md  verify_phase2.py
.github/workflows/: ci.yml.disabled
active_project/: README.md  agent_activation_template.md  handoff_template.md  phase_status.md
active_project/artifacts/: project_brief.md
active_project/context/: aria_lite.yaml  blake_lite.yaml  quinn_lite.yaml  riley_lite.yaml
d3p/: agent_mapping.yaml
d3p/integration/: phase_1_agents.md
d3p/phases/: phase_3_ai_instructions.md  phase_5_ai_instructions.md
design_agents/: agents.yaml
design_agents/phases/: aura-phases.md  brand-phases.md  layout-phases.md  motion-phases.md  requirement-phases.md
dev_agents/: agents.yaml
dev_agents/phases/: api-phases.md  architect-phases.md  backend-phases.md  data-phases.md  devops-phases.md  frontend-phases.md  mobile-phases.md  performance-phases.md  phase_10_ai_instructions.md  phase_1_ai_instructions.md  phase_2_ai_instructions.md  phase_4_ai_instructions.md  phase_6_ai_instructions.md  phase_7_ai_instructions.md  phase_8_ai_instructions.md  phase_9_ai_instructions.md  qa-phases.md  security-phases.md
docs/: agents.md  architecture.md  commands.md  configuration.md  custom-validation-rules.md  d3p-protocol.md  development.md  installation.md  mcp-planning-discussion.md  sandbox.md  schema-migration-cli.md  workflows.md
mcp-unified-agents/: PHASE_1_2_CONTROL_PLAN.md  PHASE_1_DISCOVERY_COMPLETE.md  PHASE_1_PLAN.md  PHASE_2_ARCHITECTURE.md  PHASE_2_COMPLETE.md  PHASE_2_ROADMAP.md  PHASE_2_SAFETY_FEATURES.md  README.md  REVIEW_FIXES_SUMMARY.md  REVIEW_RESPONSE_PLAN.md  SUMMARY.md  agents.json  agents.yaml  conversation_store.py  deploy.py  pr_response.md  server.py  test_advanced_workflow.py  test_debug.py  test_deployment.py  test_integration.py  test_manual.py  test_server.py  test_server_improvements.py  test_workflow.py  test_workflow_safety.py
mcp-unified-agents/deployment/: README.md  __init__.py  deployment_lock.py  deployment_manager.py  version_manager.py
mcp-unified-agents/docs/: PR5-improvements.md  d3p-agents-documentation.md  d3p-pragmatic-integration-review.md  deployment-system-plan.md  discourse-agent-usage.md  implementation-status.md
mcp-unified-agents/reviews/: PR5-review.md
mcp-unified-agents/tools/: __init__.py  architect.py  backend.py  control.py  discourse.py  discovery.py  qa.py  session.py  workflow.py
mcp-unified-agents/workflow/: __init__.py  context.py  engine.py  executor.py  monitor.py  templates.py
orchestration/workflows/: bug_investigation.yaml  feature_development.yaml
tests/: __init__.py  conftest.py  test_smoke.py
tests/integration/: __init__.py  test_cli_interactive.py  test_commit_command.py  test_discourse_claude_code.py  test_discourse_cli.py
tests/unit/: __init__.py  test_agent_schema.py  test_async_engine.py  test_async_workflow.py  test_command_parser.py  test_discourse.py  test_discourse_conversation.py  test_event_bus.py  test_git_commit.py  test_phase_manager.py  test_sandbox.py  test_schema_version.py  test_tools.py  test_validation.py  test_workflow_engine.py
unified/: PROJECT_STATUS.md  README.md  __init__.py  cli.py  demo.py  py.typed  requirements.txt
unified/agents/: __init__.py  manager.py  schema.py
unified/config/: agents.yml
unified/core/: __init__.py  async_command_executor.py  (+5 more)
(+23 files in other folders)
