[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-agents"
version = "0.1.0"
description = "Unified D3P-SuperClaude Agent System"
readme = "README.md"
authors = [
    {name = "AI Agent Development Team"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/agents"
Issues = "https://github.com/yourusername/agents/issues"

[project.scripts]
unified-agents = "unified.cli:cli"
ua = "unified.cli:cli"

[tool.setuptools.packages.find]
include = ["unified*", "design_agents*", "dev_agents*", "d3p*"]

[tool.setuptools.package-data]
"*" = ["*.yml", "*.yaml", "*.md"]